--- a/pages/report-table.html
+++ b/pages/report-table.html
@@ -115,11 +115,11 @@
       </div>
       <!-- check for current reporting -->
       <div class="check-current-reporting">
-        <input type="checkbox" />
+        <input type="checkbox" class="checkBoxInput"/>
         <p>Turn on current reporting</p>
       </div>
       <!-- select linkx -->
-      <div class="reportselect-links">
+      <div class="reportselect-links" >
         <a>Select all</a>&nbsp;&nbsp;
         <a>Select none</a>
       </div>
@@ -191,6 +191,72 @@
           Current Prospects</label
         >
       </div>
+
+      <!-- div to be displayed when checked -->
+
+      <div
+      class="currentReportingOption"
+      id="recurrent-options"
+        
+    >
+      <form>
+        <div class="form-group">
+          <label class="when-label" for="schedule">When:</label>
+          <select
+            class="when-select"
+            id="schedule"
+            name="schedule"
+          >
+            <option value="monthly">
+              Every first day of the month
+            </option>
+            <!-- Add more options as needed -->
+          </select>
+        </div>
+        <div class="form-group">
+          <label class="when-label" for="email">To:</label>
+          <input
+            class="to-input"
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Enter Email Addresses"
+          />
+        </div>
+      </form>
+      <div class="format">
+        <p>Format:</p>
+        <div class="toggle-group">
+          <div class="toggle-option">
+            <span>Excel</span>
+            <label class="switch">
+              <input
+                class="input"
+                class="input"
+                type="checkbox"
+                checked
+              />
+              <span class="slider"></span>
+            </label>
+          </div>
+          <div class="toggle-option">
+            <span>PDF</span>
+            <label class="switch">
+              <input class="input" type="checkbox" checked />
+              <span class="slider"></span>
+            </label>
+          </div>
+          <div class="toggle-option">
+            <span>PPT</span>
+            <label class="switch">
+              <input class="input" type="checkbox" checked />
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+
       <!-- cancel and create button  -->
       <div class="cancel-create-button">
         <button class="cancel">Cancel</button>
