added signup link

--- a/pages/main.html
+++ b/pages/main.html
@@ -46,6 +46,8 @@
         </div>
         <!-- <a href="#dashboard-page" class="login-button">Login</a> -->
         <button type="submit" class="login-button">Login</button>
+
+        <p class="sign-up">Don't have an account? <a>Sign up</a></p>
       </form>
     </div>
   </div>
